--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "browserify": "^13.0.1",
     "coffee-script": "^1.10.0",
+    "coffeeify": "^2.0.1",
     "debowerify": "^1.5.0",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
